objects/Advanced_Support_Groups__c.object
<CustomObject>
    <description>E2E (Expert to Expert)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Products__c</fullName>
        <defaultValue>true</defaultValue>
        <label>All Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Advanced_Support_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <label>Chatter Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Advanced Support Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Advanced Support Groups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advanced Support Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>